# telegram-agents

./: .env.example  .gitignore  README.md  REVIEW.md  chatgpt-export_Telegram Bot 协作实验.md  design.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  b2b_protocol.md  workflows.md
src/tg_agent_bot/: __init__.py  __main__.py  app.py  config.py  llm.py  memory.py
src/tg_agent_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tg_agent_bot/b2b/: __init__.py  dispatcher.py  protocol.py
src/tg_agent_bot/calendar/: __init__.py  models.py  service.py  store.py
src/tg_agent_bot/expedition/: __init__.py  actions.py  bot_pool.py  commands.py  compiler.py  director.py  dispatcher.py  generator.py  knowledge.py  models.py  planner.py  stage.py  templates.py
src/tg_agent_bot/orchestrator/: __init__.py  planner.py  (+5 more)
tests/: test_b2b_protocol.py  test_calendar_service.py  test_calendar_store.py  test_config.py  test_expedition_actions.py  test_expedition_commands.py  test_expedition_compiler.py  test_expedition_director.py  test_expedition_dispatcher.py  test_expedition_generator.py  test_expedition_planner.py  test_expedition_stage.py  test_llm.py  test_orchestrator_workflows.py  test_slot_matcher_service.py  test_telegram_formatting.py  test_telegram_utils.py  test_weather_service.py
tg_agent_bot/: b2b.py  bot.py  calendar_service.py  config.py  llm.py  memory.py  orchestrator.py  polling_smoke_test.py  schedule.py  schedule_llm.py  slot_matcher_service.py  smoke_test.py  weather_service.py
tg_agent_bot/bots/: __init__.py
(+17 files in other folders)
