
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-agent-bot"
version = "0.1.0"
description = "Telegram multi-bot expedition stage runtime"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv==1.1.0",
  "python-telegram-bot==22.7",
  "httpx==0.28.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
